# blackboxai-1741218320069

./: README.md
solana-fullstack/: .gitignore  README.md
solana-fullstack/backend/: .env  .env.example  package-lock.json  package.json
solana-fullstack/backend/src/: server.ts
solana-fullstack/backend/src/config/: db.ts
solana-fullstack/backend/src/controllers/: poolController.ts  solanaController.ts
solana-fullstack/backend/src/models/: pool.model.ts  spinWheel.model.ts
solana-fullstack/backend/src/routes/: poolRoutes.ts  solanaRoutes.ts
solana-fullstack/backend/src/services/: database.service.ts
solana-fullstack/backend/src/types/: solana.ts
solana-fullstack/backend/src/utils/: logger.ts
solana-fullstack/contracts/: Anchor.toml  Cargo.toml
solana-fullstack/contracts/programs/my_smart_contract/src/: lib.rs
solana-fullstack/frontend/: .env.example  package-lock.json  package.json  tsconfig.json
solana-fullstack/frontend/public/: index.html
solana-fullstack/frontend/src/: App.tsx  index.tsx
solana-fullstack/frontend/src/components/: Navbar.tsx
solana-fullstack/frontend/src/pages/: CreateRecord.tsx  Home.tsx  ViewRecords.tsx
solana-fullstack/frontend/src/services/: api.ts
solana-fullstack/frontend/src/types/: index.ts
