[package]
name = "my_smart_contract"
version = "0.1.0"
description = "Solana smart contract for managing records"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16.0"
